--- a/app/src/main/res/layout/activity_aqi.xml
+++ b/app/src/main/res/layout/activity_aqi.xml
@@ -2,21 +2,19 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical">
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".aqiActivity">
     <TableRow android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="50dp">
+        android:layout_height="wrap_content">
         <TextView android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textSize="80sp"
-            android:gravity="center_horizontal"
-            android:id="@+id/aqiLevel"
-            android:text="@string/loading" />
+            android:text="@string/air_quality_index"
+            android:textSize="30sp"
+            android:layout_marginBottom="30dp"/>
     </TableRow>
     <TableRow android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,18 +22,10 @@
         <TextView android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="20sp"
+            android:textSize="40sp"
             android:id="@+id/aqiCondition"
-            android:text="@string/loading" />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal">
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="@string/aqi"
-            android:layout_marginBottom="30dp" />
+            android:text="@string/loading"
+            android:layout_marginBottom="30dp"/>
     </TableRow>
     <TableRow>
         <TextView android:layout_width="0dp"
