--- a/app/src/main/res/layout/activity_aqi.xml
+++ b/app/src/main/res/layout/activity_aqi.xml
@@ -150,7 +150,7 @@
         <TextView android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="All measurements are in µm/g³"/>
+            android:text="All measurements are in µg/m³"/>
     </TableRow>
 </TableLayout>
 </ScrollView>
