--- a/app/src/main/res/layout/small_detail_layout.xml
+++ b/app/src/main/res/layout/small_detail_layout.xml
@@ -1,57 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TableRow>
-        <LinearLayout android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/time"
-                android:textSize="20sp"/>
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/mainCondition"
-                android:textSize="20sp"/>
-            <LinearLayout android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/wind" />
-                <ImageView android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:id="@+id/windArrow"
-                    android:src="@drawable/wind_arrow"
-                    android:contentDescription="@string/loading"/>
-            </LinearLayout>
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/humidity" />
-            <TextView android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/pressure" />
-        </LinearLayout>
-        <LinearLayout android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-        <ImageView android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/icon"
-            android:contentDescription="@string/loading"/>
-        <TextView android:layout_height="wrap_content"
+<!-- weather_item.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:gravity="center_horizontal">
+
+    <TextView
+            android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textSize="20sp"
-            android:id="@+id/mainTemp"/>
-        </LinearLayout>
-    </TableRow>
-    <TableRow android:gravity="center_horizontal">
-        <View
-            android:layout_width="320dp"
-            android:layout_height="0.5dp"
-            android:background="#7F7F7F" />
-    </TableRow>
-</TableLayout>
+            android:layout_height="wrap_content"/>
+
+    <ImageView
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:contentDescription="Weather icon"/>
+
+    <TextView
+            android:id="@+id/temp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+</LinearLayout>
